--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ for (var i = 0; i < info2.length; i++) {
 		// Some specs for the circles
 		var elem = canvas
 			.selectAll("g title")
-			.data(info2[i].name); // using the datapoints 
+			.data(info2.length); // using the datapoints 
 
 
 			// Create a container for each circle
