--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ var fontSize = 75;
 var text = canvas.append("text")
 	.attr("x", 50)
 	.attr("y", height/2)
-	.style("font", "fontSize 'stellar'")
+	.style("font", fontSize, "'stellar'")
 	.text(names[0]); 
 
 	// for(a=0; a < names.length; a++){
