adding page likes

--- a/index.html
+++ b/index.html
@@ -463,6 +463,12 @@ canvas.append("text")
 	.style("opacity", 1.0); 
 
 
+    	svg.on('click', function() {
+  		//console.log("You clicked")
+		pageLikes();
+		});
+
+
 }// end of loadingAds function 
 
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
