--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ function pageLikes(){
 		var text = canvas.append("text")
 			.attr("x",20)
 			.attr("y", 100)
-			.text("FETCHING YOUR DATA...")
+			//.text("FETCHING YOUR DATA...")
 			.style("font", "75px 'stellar'")
 			.style("fill", "black");
 
