--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	svg.on('click', function() {
+    	rectButton.on('click', function() {
   		//console.log("You clicked")
 		//pageLikes();
 		loadingAds(); 
