--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ FB.getLoginStatus(function(response) {
         // 	pageLikes()});
 
         	canvas.append("text")
-              .attr("x", 90)
+              .attr("x", width - 190)
               .attr("y", 885)
-              .text("CONTINUE")
+              .text("CONTINUE ---->")
               .style("font", "25px 'stellar'")
               .style("fill", "white");
 
@@ -331,7 +331,7 @@ FB.getLoginStatus(function(response) {
       //         .style("font", "25px 'stellar'")
       //         .style("fill", "black");
 
-    	rectButton.on('click', function(d,i) {
+    	svg.on('click', function() {
   		//console.log("You clicked")
 		//pageLikes();
 		loadingAds(); 
