--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@ FB.getLoginStatus(function(response) {
 
         document.getElementById('status').innerHTML = "<img class = img src='" + response.picture.data.url + "'>";
 
-      canvas.append("text")
-        .attr("x", 50)
-        .attr("y", 750)
-        .text("EXPLORE YOUR ONLINE IDENTITY")
-        .style("font", "30px 'stellar'")
-        .style("fill", "black");
+      // canvas.append("text")
+      //   .attr("x", 50)
+      //   .attr("y", 750)
+      //   .text("EXPLORE YOUR ONLINE IDENTITY")
+      //   .style("font", "30px 'stellar'")
+      //   .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 800)
+        .attr("y", 750)
         .text("--------------------------------------------------------------------")
         .style("font", "20px 'stellar'")
         .style("fill", "black");
@@ -299,7 +299,7 @@ FB.getLoginStatus(function(response) {
         	canvas.append("text")
               .attr("x", width - 190)
               .attr("y", 885)
-              .text("CONTINUE ---->")
+              .text("EXPLORE ---->")
               .style("font", "25px 'stellar'")
               .style("fill", "white");
 
