--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@ FB.getLoginStatus(function(response) {
         .style("fill", "black");
 
 
-      var rectButton = canvas.append("rect")
-      	.attr("x", 0)
-      	.attr("y", 830)
-      	.attr("width", width)
-      	.attr("height", 90)
-      	.style("fill", "black"); 
+      // var rectButton = canvas.append("rect")
+      // 	.attr("x", 0)
+      // 	.attr("y", 830)
+      // 	.attr("width", width)
+      // 	.attr("height", 90)
+      // 	.style("fill", "black"); 
 
 
       // var button1 = canvas.append("svg:image")
@@ -298,10 +298,10 @@ FB.getLoginStatus(function(response) {
 
         	canvas.append("text")
               .attr("x", width - 190)
-              .attr("y", 885)
+              .attr("y", 830)
               .text("EXPLORE ---->")
               .style("font", "25px 'stellar'")
-              .style("fill", "white");
+              .style("fill", "black");
 
       // var button2 = canvas.append("svg:image")
       //   .attr('x', 260)
