--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ FB.getLoginStatus(function(response) {
         // 	pageLikes()});
 
         	canvas.append("text")
-              .attr("x", width - 190)
+              .attr("x", 50)
               .attr("y", 830)
               .text("EXPLORE ---->")
               .style("font", "25px 'stellar'")
