--- a/index.html
+++ b/index.html
@@ -304,14 +304,14 @@ FB.getLoginStatus(function(response) {
          //      .style("fill", "black");
 
       var button2 = canvas.append("svg:image")
-        .attr('x', 260)
+        .attr('x', 50)
         .attr('y', 830)
         .attr('width', 180)
         .attr('height', 90)
         .attr("xlink:href", "button.png");
 
             canvas.append("text")
-              .attr("x", 290)
+              .attr("x", 80)//+30
               .attr("y", 885)
               .text("ADVERTISERS")
               .style("font", "25px 'stellar'")
