--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@ FB.getLoginStatus(function(response) {
     	svg.on('click', function() {
   		//console.log("You clicked")
 		//pageLikes();
-		loadingAds(); 
-		//statement();
+		//loadingAds(); 
+		statement();
 		});
 
       });//end of api function 
@@ -497,7 +497,7 @@ function adFact(){
    //      .style("fill", "white");
 
 			var text = canvas.append("text")
-			.attr("x",3000)
+			.attr("x",300)
 			.attr("y", 120)
 			.text("FACEBOOK MAKES $22,311") //$7437 every minute 
 			.style("font", "80px 'stellar'")
