--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ function adFact(){
    //      .style("fill", "white");
 
 			var text = canvas.append("text")
-			.attr("x",300)
+			.attr("x",400)
 			.attr("y", 120)
 			.text("FACEBOOK MAKES $22,311") //$7437 every minute 
 			.style("font", "80px 'stellar'")
@@ -505,17 +505,25 @@ function adFact(){
 
 
 		canvas.append("text")
-			.attr("x",300)
+			.attr("x",400)
 			.attr("y", 240)
 			.text("FROM DIGITAL AD'S")
 			.style("font", "80px 'stellar'")
 			.style("fill", "black");
 
 		canvas.append("text")
-			.attr("x",300)
+			.attr("x",400)
 			.attr("y", 380)
 			.text("EVERY 3 MINUTES")
 			.style("font", "80px 'stellar'")
+			.style("fill", "black");
+
+
+		canvas.append("text")
+			.attr("x",400)
+			.attr("y", 440)
+			.text("But facebook is not the only digital platform")
+			.style("font", "30px 'stellar'")
 			.style("fill", "black");
 
 }//end of adFact function 
