--- a/index.html
+++ b/index.html
@@ -403,6 +403,20 @@ for (var i = 0; i < info2.length; i++) {
 
   });//end of fb api function 
 
+       var button4 = canvas.append("svg:image")
+        .attr('x', width - 600)
+        .attr('y', 300)
+        .attr('width', 300)
+        .attr('height', 90)
+        .attr("xlink:href", "button.png");
+
+            canvas.append("text")
+              .attr("x", width - 630)//+30
+              .attr("y", 355)//+55
+              .text("SHOW ME THE £$")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
+
         svg.on('click', function() {
   		//console.log("You clicked")
 		adFact();
@@ -488,16 +502,16 @@ canvas.append("text")
 
 function adFact(){
 
-   // document.getElementById('status').style.visibility = 'hidden';
-   //  var rect = canvas.append("rect")
-   //      .attr("x", 0)
-   //      .attr("y", 0)
-   //      .attr("width", width)
-   //      .attr("height", 1000)
-   //      .style("fill", "white");
+   document.getElementById('status').style.visibility = 'hidden';
+    var rect = canvas.append("rect")
+        .attr("x", 0)
+        .attr("y", 0)
+        .attr("width", width)
+        .attr("height", 1000)
+        .style("fill", "white");
 
 			var text = canvas.append("text")
-			.attr("x",400)
+			.attr("x",50)
 			.attr("y", 120)
 			.text("FACEBOOK MAKES $22,311") //$7437 every minute 
 			.style("font", "80px 'stellar'")
@@ -505,14 +519,14 @@ function adFact(){
 
 
 		canvas.append("text")
-			.attr("x",400)
+			.attr("x",50)
 			.attr("y", 240)
 			.text("FROM DIGITAL AD'S")
 			.style("font", "80px 'stellar'")
 			.style("fill", "black");
 
 		canvas.append("text")
-			.attr("x",400)
+			.attr("x",50)
 			.attr("y", 380)
 			.text("EVERY 3 MINUTES")
 			.style("font", "80px 'stellar'")
@@ -520,7 +534,7 @@ function adFact(){
 
 
 		canvas.append("text")
-			.attr("x",400)
+			.attr("x",50)
 			.attr("y", 440)
 			.text("But facebook is not the only digital platform")
 			.style("font", "30px 'stellar'")
