--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ for (var i = 0; i < info2.length; i++) {
 
   });//end of fb api function 
 
-       var button4 = canvas.append("svg:image")
+       var button5 = canvas.append("svg:image")
         .attr('x', width - 600)
         .attr('y', 300)
         .attr('width', 300)
@@ -539,6 +539,20 @@ function adFact(){
 			.text("But facebook is not the only digital platform")
 			.style("font", "30px 'stellar'")
 			.style("fill", "black");
+
+	// var button6 = canvas.append("svg:image")
+ //        .attr('x', 30)
+ //        .attr('y', 300)
+ //        .attr('width', 300)
+ //        .attr('height', 90)
+ //        .attr("xlink:href", "button.png");
+
+ //            canvas.append("text")
+ //              .attr("x", 90)//+30
+ //              .attr("y", 355)//+55
+ //              .text("WHO ARE MY AD'S?")
+ //              .style("font", "25px 'stellar'")
+ //              .style("fill", "black");
 
 }//end of adFact function 
 
